--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Halant:400,300,500,700,600' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	
+	<nav class="container">
+		<ul class="row">
+			<li>classes</li>
+			<li>setting</li>
+			<li class="logo-holder">
+				<img src="images/sns_logo_v2.svg">
+			</li>
+			<li>factions</li>
+			<li>get started</li>
+		</ul>
+	</nav>
 </body>
 </html>
