starting sketch/ mockup for hero effect

--- a/index.html
+++ b/index.html
@@ -18,5 +18,22 @@
 			<li>get started</li>
 		</ul>
 	</nav>
+	<section id="hero" class="container">
+		<div class="hero-slogan">
+			<p>
+				<span class="redacted">all</span> 
+				spies 
+				<span class="redacted">speak fluently</span>
+			</p>
+			<p>
+				<span class="redacted">in silence</span> 
+				and 
+				<span class="redacted">clothe</span>
+			</p>
+			<p>
+				<span class="redacted">themselves in</span> shadows
+			</p>
+		</div>
+	</section>
 </body>
 </html>
