starting CLASSES section

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Spies and Shadows</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Halant:400,300,500,700,600' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Rubik:400,300,300italic,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<nav class="container">
@@ -24,7 +24,6 @@
 				<span class="redacted">all</span> 
 				spies 
 				<span class="redacted">speak fluently</span>
-			</p>
 			<p>
 				<span class="redacted">in silence</span> 
 				and 
@@ -34,6 +33,77 @@
 				<span class="redacted">themselves in</span> shadows
 			</p>
 		</div>
+		<p class="subtitle">
+			an espionage roleplaying game
+		</p>
+		<button class="learn-more">
+			learn more
+		</button>
 	</section>
+	<div class="gridder">
+		<section id="game-blurb" class="container">
+			<div class="row">
+				<p class="six columns">The espionage world is one behind our own; a world of wire-taps, cyber-terrorism, dead drops, spy-cameras, tricked-out cars, femme fatales, debonair superspies and plots to end or destabilize the world. 
+				</p>
+				<p class="six columns">Spies are everywhere, in the shadows behind bookcases, as the sultry waitress in a restaurant, the dodgy- yet- resourceful armored car driver, the passionate diplomat, even the geek behind the high-end computer.
+				</p>
+			</div> 
+			<div class="row">
+				<p class="six columns offset-by-three">
+					Deep inside you know that people are sheep.
+				</p>
+			</div>
+			<div class="row">
+				<p class="six columns offset-by-three">
+				 This world is for shepherds or wolves. 
+				</p>
+			</div>
+			<div class="row">
+				<p class="four columns offset-by-four">
+				 Which one are you? 
+				</p>
+			</div>
+		</section>
+	</div>
+	<section id="char-classes" class="container">
+	<h2>classes</h2>
+		<div class="character-gallery u-cf">
+			<div class="character cypher">
+				<div class="summary">
+					<h4>cypher</h4>
+				</div>
+			</div>
+			<div class="character pointman">
+				words
+				<h4>pointman</h4>
+			</div>
+			<div class="character faceman">
+				words
+				<h4>faceman</h4>
+			</div>
+			<div class="character soldier">
+				words
+				<h4>soldier</h4>
+			</div>
+			<div class="character scout">
+				words
+				<h4>scout</h4>
+			</div>
+		</div>
+		<div class="character-details row">
+			<div class="prof-and-skills five columns">
+				<div class="proficiencies">
+					Courier bomb monofilament singularity assassin BASE jump cartel military-grade tiger-team systemic kanji face forwards. Shibuya paranoid render-farm denim corrupted ablative neural. Free-market lights order-flow rebar table j-pop human uplink vinyl nano--ware. 
+				</div>
+				<div class="skills">
+					Pistol human girl spook sign Shibuya bicycle semiotics computer. Wonton soup stimulate drone digital sunglasses systemic towards courier range-rover cartel meta-otaku. Skyscraper augmented reality towards digital shanty town crypto-corrupted saturation point drugs camera paranoid. Denim fetishism range-rover uplink disposable Shibuya cyber-tank-traps sentient pre-long-chain hydrocarbons saturation point gang. 
+				</div>
+			</div>
+			<div class="char-description seven columns">
+				Artisanal nano-concrete weathered cyber-modem realism city sensory. Paranoid drugs systemic receding Chiba hotdog soul-delay j-pop sensory corporation grenade saturation point Legba. Shibuya wristwatch cyber-bicycle crypto-assault artisanal Chiba into math-vinyl physical hacker paranoid tanto garage. Narrative assassin digital corporation silent math-render-farm 3D-printed fetishism girl rifle vehicle BASE jump papier-mache. BASE jump grenade ablative savant bicycle carbon youtube engine girl drone camera vehicle paranoid beef noodles papier-mache receding. 
+			</div>
+		</div>
+	</section>
+
 </body>
 </html>
