finished logic for character class gallery

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Spies and Shadows</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700|Rubik:400,300,300italic,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Glegoo:400,700|Rubik:400,300,300italic,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
 	<script src="https://use.fontawesome.com/6850a3e964.js"></script>
 </head>
 <body>
@@ -69,10 +69,10 @@
 	<section id="char-classes" class="container">
 	<h2>classes</h2>
 		<div class="character-gallery u-cf">
-			<div class="character cypher">
+			<div class="character sleuth" data="sleuth">
 				<div class="image-mask open"></div>
 				<div class="summary open">
-					<h4>cypher</h4>
+					<h4>sleuth</h4>
 					<ul class="traits">
 						<li>
 							intellectual
@@ -89,109 +89,100 @@
 					</p>
 				</div>
 			</div>
-			<div class="character pointman">
+			<div class="character pointman" data="pointman">
 				<div class="image-mask"></div>
 					<div class="summary">
 					<h4>pointman</h4>
 					<ul class="traits">
 						<li>
-							intellectual
+							Efficient
 						</li>
 						<li>
-							analytical
+							Resourceful
 						</li>
 						<li>
-							observant
+							Bold
 						</li>
 					</ul>
 					<p>
-						Deductive and investigative expert. Proficient in pattern forming, puzzle solving, and investigation.
+						Situational assessment expert. Proficient in field tactics and team dynamics. Field commander. 
 					</p>
 				</div>
 			</div>
-			<div class="character faceman">
+			<div class="character faceman" data="faceman">
 				<div class="image-mask"></div>
 					<div class="summary">
 					<h4>faceman</h4>
 					<ul class="traits">
 						<li>
-							intellectual
+							Confident
 						</li>
 						<li>
-							analytical
+							Cunning
 						</li>
 						<li>
-							observant
+							insightful
 						</li>
 					</ul>
 					<p>
-						Deductive and investigative expert. Proficient in pattern forming, puzzle solving, and investigation.
+						Social interaction expert. Fluent in interpreting non-verbal cues. Adept at Social engineering.
 					</p>
 				</div>
 			</div>
-			<div class="character soldier">
+			<div class="character soldier" data="soldier">
 				<div class="image-mask"></div>
 					<div class="summary">
 					<h4>soldier</h4>
 					<ul class="traits">
 						<li>
-							intellectual
+							dangerous
 						</li>
 						<li>
-							analytical
+							tactical
 						</li>
 						<li>
-							observant
+							lethal
 						</li>
 					</ul>
 					<p>
-						Deductive and investigative expert. Proficient in pattern forming, puzzle solving, and investigation.
+						Combat expert. Versatile operative versed in weapons, armor, and military tactics.
 					</p>
 				</div>
 			</div>
-			<div class="character scout">
+			<div class="character scout" data="scout">
 				<div class="image-mask"></div>
 					<div class="summary">
 					<h4>scout</h4>
 					<ul class="traits">
 						<li>
-							intellectual
+							dynamic
 						</li>
 						<li>
-							analytical
+							agile
 						</li>
 						<li>
-							observant
+							resillient
 						</li>
 					</ul>
 					<p>
-						Deductive and investigative expert. Proficient in pattern forming, puzzle solving, and investigation.
+						Mobility and navigation expert. Adept at vehicle operations, hand-to-hand combat, and pathfinding.
 					</p>
 				</div>
 			</div>
 		</div>
 		<div class="character-details row">
-			<div class="prof-and-skills five columns">
-				<div class="proficiencies">
-					<h5>Proficiencies</h5>
-					<ul>
+			<div class="features-and-skills five columns">
+				<div class="features">
+					<h5>Class Features</h5>
+					<ul class="features-list">
 						<li>
-							<i class="fa fa-low-vision" aria-hidden="true"></i>
+							Increased intellect attribute
 						</li>
 						<li>
-							<i class="fa fa-low-vision" aria-hidden="true"></i>
+							Excels at mental / puzzle encounters
 						</li>
 						<li>
-							<i class="fa fa-low-vision" aria-hidden="true"></i>
-						</li>
-						<li>
-							<i class="fa fa-low-vision" aria-hidden="true"></i>
-						</li>
-						<li>
-							<i class="fa fa-low-vision" aria-hidden="true"></i>
-						</li>
-						<li>
-							<i class="fa fa-low-vision" aria-hidden="true"></i>
+							Pinpoints weaknesses in enemies/ enemy tactics.
 						</li>
 					</ul>
 				</div>
@@ -199,33 +190,30 @@
 					<h5>Skills</h5>
 					 <ul>
 					 	<li>
-					 		<i class="fa fa-low-vision" aria-hidden="true"></i>
+					 		<i class="fa fa-search" aria-hidden="true"></i>
+					 		Analysis
 					 	</li>
 					 	<li>
-					 		<i class="fa fa-low-vision" aria-hidden="true"></i>
+					 		<i class="fa fa-book" aria-hidden="true"></i>
+					 		Knowledge
 					 	</li>
 					 	<li>
-					 		<i class="fa fa-low-vision" aria-hidden="true"></i>
-					 	</li>
-					 	<li>
-					 		<i class="fa fa-low-vision" aria-hidden="true"></i>
-					 	</li>
-					 	<li>
-					 		<i class="fa fa-low-vision" aria-hidden="true"></i>
-					 	</li>
-					 	<li>
-					 		<i class="fa fa-low-vision" aria-hidden="true"></i>
+					 		<i class="fa fa-eye" aria-hidden="true"></i>
+					 		Notice
 					 	</li>
 					 </ul>
 				</div>
 				<button>
-					play a cypher
+					play a sleuth
 				</button>
 			</div>
 			<div class="char-description seven columns">
-				<h5>Class Description</h5>
+				<h5>Description</h5>
 				<p>
-					All spies are adept at gathering information, making decisions under pressure, and creating tactical assessments on the fly – with the limited information at hand. Some use their physical ability, others their natural charisma, others still live by the skin of their teeth or by the agent at their side. For a select few, information is not merely the end result of an observation or investigation; it is a weapon that is superior to any rifle or handgun, a vessel capable of traversing the vast distances on our planet in moments, and a tool capable of breaking even the most stoic poker face. They are some of the smartest people on the planet. Brilliant, observant, and dangerously cunning - Cyphers beat their opponents long before they encounter them. They use information as formidable weapons, and their sharp minds to outthink their opponents. 
+					All spies are adept at gathering information, making decisions under pressure, and creating tactical assessments on the fly – with the limited information at hand. Some use their physical ability, others their natural charisma, others still live by the skin of their teeth or by the agent at their side. For a select few, information is not merely the end result of an observation or investigation; it is a weapon that is superior to any rifle or handgun, a vessel capable of traversing the vast distances on our planet in moments, and a tool capable of breaking even the most stoic poker face.
+				</p>
+				<p>
+					They are some of the smartest people on the planet. Brilliant, observant, and dangerously cunning - sleuths beat their opponents long before they encounter them. They use information as formidable weapons, and their sharp minds to outthink their opponents. 
 				</p>
 			</div>
 		</div>
