--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<img src="images/sns_logo_v2.svg">
 			</li>
 			<li><a href="#factions">factions</a></li>
-			<li><a href="">get started</a></li>
+			<li><a href="#get-started">get started</a></li>
 		</ul>
 	</nav>
 	<section id="hero" class="container">
@@ -38,7 +38,7 @@
 			an espionage roleplaying game
 		</p>
 		<button class="learn-more">
-			learn more
+			<a href="#game-blurb">learn more</a>
 		</button>
 	</section>
 	<div class="cityscape">
@@ -316,7 +316,50 @@
 				</div>
 			</div>
 		</section>
-	</div>
+	</div><!--  end gridder -->
+	<section id="get-started" class="container">
+		<h2>get started</h2>
+		<div class="row">
+			<div class="agent-materials six columns">
+				<h4>Agent's Manual</h4>
+				<p>Contains everything a rookie needs
+				to start a game of S&S.</p>
+				<button>download</button>
+			</div>
+			<div class="agent-materials six columns">
+				<h4>Game Control Guide</h4>
+				<p>Contains everything a GC needs to facilitate and helm a game of S&S.</p>
+				<button>download</button>
+			</div>
+		</div>
+		<div class="row">
+			<div class="gc-materials six columns">
+				<h4>Agent Sheet</h4>
+				<p>Records and statistics document for rookie field agents.</p>
+				<button>download</button>
+			</div>
+			<div class="agent-materials six columns">
+				<h4>Mission and Scene Cards</h4>
+				<p>Scenarios and challenges to help construct the GC’s world.</p>
+				<button>download</button>
+			</div>
+		</div>
+	</section>
+	<footer class="container">
+		<div class="row">
+			<ul class="links">
+				<li><a href="">classes</a></li>
+				<li><a href="">setting</a></li>
+				<li><a href="">factions</a></li>
+				<li><a href="">get started</a></li>
+			</ul>
+			<div class="the-creators">
+				<h4>the creators</h4>
+				<a href="">@heyheymiguel</a>
+				<a href="">@cpon_prod</a>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
 
