finished fiction section

--- a/index.html
+++ b/index.html
@@ -278,6 +278,26 @@
 					</p>
 					<i class="fa fa-plus-square" aria-hidden="true"></i>
 				</div>
+				<div class="faction-details eleven columns offset-by-one">
+					<p class="blurb">
+						Aesir is the European Union’s clandestine organization, formed to prevent threats to the  european union’s culture, people, and way of life.
+					</p>
+					<div class="faction-history five columns">
+						<h5>History</h5>
+						<div class="history">
+						</div>
+					</div>
+					<div class="faction-structure six columns">
+						<h5>doctrine</h5>
+						<div class="doctrine">
+
+						</div>
+						<h5>organizational structure</h5>
+						<div class="org-structure">
+
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="row ksos" data="ksos">
 				<aside class="house-icon one columns">
@@ -289,6 +309,26 @@
 						“We slumber no longer.”
 					</p>
 					<i class="fa fa-plus-square" aria-hidden="true"></i>
+				</div>
+				<div class="faction-details eleven columns offset-by-one">
+					<p class="blurb">
+						The Komissija Svedenii I Obespechennosti Slavic, or KSOS is Eastern Europe’s largest and most secret Intelligence and military operation.
+					</p>
+					<div class="faction-history five columns">
+						<h5>History</h5>
+						<div class="history">
+						</div>
+					</div>
+					<div class="faction-structure six columns">
+						<h5>doctrine</h5>
+						<div class="doctrine">
+
+						</div>
+						<h5>organizational structure</h5>
+						<div class="org-structure">
+
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="row kraken" data="kraken">
@@ -302,6 +342,26 @@
 					</p>
 					<i class="fa fa-plus-square" aria-hidden="true"></i>
 				</div>
+				<div class="faction-details eleven columns offset-by-one">
+					<p class="blurb">
+						The Collective is the world’s largest and most powerful virtual community ever formed.
+					</p>
+					<div class="faction-history five columns">
+						<h5>History</h5>
+						<div class="history">
+						</div>
+					</div>
+					<div class="faction-structure six columns">
+						<h5>doctrine</h5>
+						<div class="doctrine">
+
+						</div>
+						<h5>organizational structure</h5>
+						<div class="org-structure">
+
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="row order" data="order">
 				<aside class="house-icon one columns">
@@ -313,6 +373,26 @@
 						“Force Peace.”
 					</p>
 					<i class="fa fa-plus-square" aria-hidden="true"></i>
+				</div>
+				<div class="faction-details eleven columns offset-by-one">
+					<p class="blurb">
+						O.R.D.E.R. is a global Peace-Keeping outfit secretly founded by the United Nations to monitor, to diffuse, and to deter renegade and destabilizing activity around the world.
+						</p>
+					<div class="faction-history five columns">
+						<h5>History</h5>
+						<div class="history">
+						</div>
+					</div>
+					<div class="faction-structure six columns">
+						<h5>doctrine</h5>
+						<div class="doctrine">
+
+						</div>
+						<h5>organizational structure</h5>
+						<div class="org-structure">
+
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
