RESPONSIVE BOO YAH but not really coz you forgot landscape

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Spies and Shadows</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href='https://fonts.googleapis.com/css?family=Glegoo:400,700|Rubik:400,300,300italic,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
+
 	<script src="https://use.fontawesome.com/6850a3e964.js"></script>
 </head>
 <body>
@@ -69,106 +71,107 @@
 	<section id="char-classes" class="container">
 	<h2>classes</h2>
 		<div class="character-gallery u-cf">
-			<div class="character sleuth" data="sleuth">
-				<div class="image-mask open"></div>
-				<div class="summary open">
-					<h4>sleuth</h4>
-					<ul class="traits">
-						<li>
-							intellectual
-						</li>
-						<li>
-							analytical
-						</li>
-						<li>
-							observant
-						</li>
-					</ul>
-					<p>
-						Deductive and investigative expert. Proficient in pattern forming, puzzle solving, and investigation.
-					</p>
-				</div>
-			</div>
-			<div class="character pointman" data="pointman">
-				<div class="image-mask"></div>
-					<div class="summary">
-					<h4>pointman</h4>
-					<ul class="traits">
-						<li>
-							Efficient
-						</li>
-						<li>
-							Resourceful
-						</li>
-						<li>
-							Bold
-						</li>
-					</ul>
-					<p>
-						Situational assessment expert. Proficient in field tactics and team dynamics. Field commander.
-					</p>
-				</div>
-			</div>
-			<div class="character faceman" data="faceman">
-				<div class="image-mask"></div>
-					<div class="summary">
-					<h4>faceman</h4>
-					<ul class="traits">
-						<li>
-							Confident
-						</li>
-						<li>
-							Cunning
-						</li>
-						<li>
-							insightful
-						</li>
-					</ul>
-					<p>
-						Social interaction expert. Fluent in interpreting non-verbal cues. Adept at Social engineering.
-					</p>
-				</div>
-			</div>
-			<div class="character soldier" data="soldier">
-				<div class="image-mask"></div>
-					<div class="summary">
-					<h4>soldier</h4>
-					<ul class="traits">
-						<li>
-							dangerous
-						</li>
-						<li>
-							tactical
-						</li>
-						<li>
-							lethal
-						</li>
-					</ul>
-					<p>
-						Combat expert. Versatile operative versed in weapons, armor, and military tactics.
-					</p>
-				</div>
-			</div>
-			<div class="character scout" data="scout">
-				<div class="image-mask"></div>
-					<div class="summary">
-					<h4>scout</h4>
-					<ul class="traits">
-						<li>
-							dynamic
-						</li>
-						<li>
-							agile
-						</li>
-						<li>
-							resillient
-						</li>
-					</ul>
-					<p>
-						Mobility and navigation expert. Adept at vehicle operations, hand-to-hand combat, and pathfinding.
-					</p>
-				</div>
-			</div>
+			<div class="character sleuth clicked" data="sleuth">
+						<div class="image-mask open"></div>
+						<div class="summary open">
+							<h4>sleuth</h4>
+							<ul class="traits">
+								<li>
+									intellectual
+								</li>
+								<li>
+									analytical
+								</li>
+								<li>
+									observant
+								</li>
+							</ul>
+							<p>
+								Deductive and investigative expert. Proficient in pattern forming, puzzle solving, and investigation.
+							</p>
+						</div>
+					</div>
+					<div class="character pointman" data="pointman">
+						<div class="image-mask"></div>
+							<div class="summary">
+							<h4>pointman</h4>
+							<ul class="traits">
+								<li>
+									Efficient
+								</li>
+								<li>
+									Resourceful
+								</li>
+								<li>
+									Bold
+								</li>
+							</ul>
+							<p>
+								Situational assessment expert. Proficient in field tactics and team dynamics. Field commander.
+							</p>
+						</div>
+					</div>
+					<div class="character faceman" data="faceman">
+						<div class="image-mask"></div>
+							<div class="summary">
+							<h4>faceman</h4>
+							<ul class="traits">
+								<li>
+									Confident
+								</li>
+								<li>
+									Cunning
+								</li>
+								<li>
+									insightful
+								</li>
+							</ul>
+							<p>
+								Social interaction expert. Fluent in interpreting non-verbal cues. Adept at Social engineering.
+							</p>
+						</div>
+					</div>
+					<div class="character soldier" data="soldier">
+						<div class="image-mask"></div>
+							<div class="summary">
+							<h4>soldier</h4>
+							<ul class="traits">
+								<li>
+									dangerous
+								</li>
+								<li>
+									tactical
+								</li>
+								<li>
+									lethal
+								</li>
+							</ul>
+							<p>
+								Combat expert. Versatile operative versed in weapons, armor, and military tactics.
+							</p>
+						</div>
+					</div>
+					<div class="character scout" data="scout">
+						<div class="image-mask"></div>
+							<div class="summary">
+							<h4>scout</h4>
+							<ul class="traits">
+								<li>
+									dynamic
+								</li>
+								<li>
+									agile
+								</li>
+								<li>
+									resillient
+								</li>
+							</ul>
+							<p>
+								Mobility and navigation expert. Adept at vehicle operations, hand-to-hand combat, and pathfinding.
+							</p>
+						</div>
+					</div>
+
 		</div>
 		<div class="character-details row">
 			<div class="features-and-skills five columns">
@@ -419,7 +422,7 @@
 				<button>download</button>
 			</div>
 			<div class="agent-materials six columns">
-				<h4>Mission and Scene Cards</h4>
+				<h4>Mission & Scene Cards</h4>
 				<p>Scenarios and challenges to help construct the GC’s world.</p>
 				<button>download</button>
 			</div>
