logos and menu suggestion

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 			<h2>factions</h2>
 			<div class="row lensmen" data="lensmen">
 				<aside class="house-icon one columns">
-					icon here
+					<img src="images/logos/lensmen.png">
 				</aside>
 				<div class="faction-title eleven columns">
 					<h4>the lensmen</h4>
@@ -240,10 +240,10 @@
 			</div>
 			<div class="row silent-empire" data="silentEmpire">
 				<aside class="house-icon one columns">
-					icon here
+					<img src="images/logos/secret_empire.png">
 				</aside>
 				<div class="faction-title eleven columns">
-					<h4>The Silent Empire of the Sacred Serpent</h4>
+					<h4>The Silent Empire <br> of the Sacred Serpent</h4>
 					<p class="tagline">
 						“No cost is too great for balance.”
 					</p>
@@ -272,7 +272,7 @@
 			</div>
 			<div class="row aesir" data="aesir">
 				<aside class="house-icon one columns">
-					icon here
+					<img src="images/logos/aesir.png">
 				</aside>
 				<div class="faction-title eleven columns">
 					<h4>Aesir</h4>
@@ -304,7 +304,7 @@
 			</div>
 			<div class="row ksos" data="ksos">
 				<aside class="house-icon one columns">
-					icon here
+					<img src="images/logos/ksos.png">
 				</aside>
 				<div class="faction-title eleven columns">
 					<h4>Komissija Svedenii I Obespechennosti Slavic (KSOS)</h4>
@@ -336,7 +336,7 @@
 			</div>
 			<div class="row kraken" data="kraken">
 				<aside class="house-icon one columns">
-					icon here
+					<img src="images/logos/kraken.png">
 				</aside>
 				<div class="faction-title eleven columns">
 					<h4>kraken</h4>
@@ -368,7 +368,7 @@
 			</div>
 			<div class="row order" data="order">
 				<aside class="house-icon one columns">
-					icon here
+					<img src="images/logos/order.png">
 				</aside>
 				<div class="faction-title eleven columns">
 					<h4>O.R.D.E.R.</h4>
